--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html, body, #root {
+  height: 100%;
+  width: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +10,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  font-family: var(--ff-secondary);
+  background: var(--clr-grey-10);
+  color: var(--clr-grey-1);
+  line-height: 1.5;
+  font-size: 0.875rem;
 }
 
 code {
@@ -80,13 +91,7 @@ Global Styles
   padding: 0;
   box-sizing: border-box;
 }
-body {
-  font-family: var(--ff-secondary);
-  background: var(--clr-grey-10);
-  color: var(--clr-grey-1);
-  line-height: 1.5;
-  font-size: 0.875rem;
-}
+
 ul {
   list-style-type: none;
 }
@@ -176,7 +181,14 @@ main {
   display: grid;
   place-items: center;
 }
-.container {
+.gameover-container, .levelup-container {
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 #value {
@@ -222,4 +234,3 @@ main {
 .countdown {
   text-align: 'left';
 }
-
