--- a/src/puzzle/puzzle.css
+++ b/src/puzzle/puzzle.css
@@ -1,5 +1,5 @@
 .jigsaw-puzzle {
-    position: relative;
+    position: absolute;
 }
 
 .jigsaw-puzzle__piece {
@@ -18,3 +18,6 @@
     z-index: 5;
     box-shadow: 1px 1px 5px 0px #00000091;
 }
+
+
+  
