--- a/src/cooking_game/scene1.css
+++ b/src/cooking_game/scene1.css
@@ -104,6 +104,7 @@
     height: 8%;
     opacity: 0;
     position: absolute;
+    display: block;
 
 }
 
@@ -117,11 +118,12 @@
     }
     
     100% {
-        opacity:1;
+        opacity: 1;
         transform:scaleY(1000%);
+        -webkit-transform:scaleY(10) ;
+        -webkit-transform-origin: bottom;
         transform-origin: bottom;
     }
-    
 }
 
 @keyframes disappear {
