--- a/src/gamemenu/gamemenu.css
+++ b/src/gamemenu/gamemenu.css
@@ -6,3 +6,180 @@
     align-items: center;
     flex-direction: column;
 }
+
+.gamecard{
+    display: flex;
+    flex-direction: column;
+    background-color: #83c5be;
+    padding: 2%;
+    align-items: center;
+    margin: 2%;
+    margin-left: 25%;
+    margin-right: 25%;
+}
+
+.gamecard p{
+    font-size: 1.1rem;
+}
+
+.gamecard img{
+    width: 20%;
+    height:auto
+
+}
+
+.gamecardbtn{
+        text-transform: uppercase;
+        background: whitesmoke;
+        color: var(--clr-black);
+        padding: 0.375rem 0.75rem;
+        letter-spacing: var(--spacing);
+        display: inline-block;
+        transition: var(--transition);
+        font-size: 0.875rem;
+        border: 2px solid var(--clr-black);
+        cursor: pointer;
+        border-radius: var(--radius);
+}
+
+
+@media only screen and (max-width: 800px){
+
+    .poof {
+        display: none;
+    }
+
+    .backbtn{
+        top: 5% !important;
+    }
+
+}
+.homecontainer{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    background-color: #006D77;
+    column-gap: 50px;
+}
+
+.homesubcontainer{
+    display:flex;
+    row-gap: 5vh;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
+
+@media only screen and (max-width: 800px){
+    .homecontainer{
+        flex-direction: column;
+        row-gap: 5vh;
+    }
+
+}
+
+.aboutuscontainer {
+    display: flex;
+    background-color: #e29578;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
+
+
+.aboutussub{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    padding-right: 3%;
+    padding-left: 2%;
+}
+
+
+.aboutuscontainer p{
+    color: black;
+    font-size: 1.5rem;
+}
+
+
+@media only screen and (max-width: 800px){
+    .aboutussub{
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    .aboutussub img{
+        width: 100px;
+        height: auto;
+    }
+
+}
+
+.whygamecontainer {
+    display: flex;
+    background-color: #83c5be;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
+
+
+.whygamecontainer p{
+    color: black;
+    font-size:1.5rem;
+    padding: 1%;
+}
+
+.whygamecontainer h3{
+    color: #a3776c;
+    font-family: 'Baloo Thambi 2', cursive;
+    text-align: center;
+    padding-bottom: 2%;
+    font-size: 2rem;
+
+}
+
+.whygamecard {
+    background-color: #e29578 !important;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    width: 90%;
+    padding: 5%;
+}
+
+
+@media only screen and (max-width: 800px){
+    
+    .whygamecontainer img{
+        display:none
+    }
+
+}
+
+.backbtn{
+    text-transform: uppercase;
+    color: var(--clr-black);
+    padding: 0.375rem 1.5rem;
+    letter-spacing: var(--spacing);
+    display: inline-block;
+    transition: var(--transition);
+    font-size: 2rem;
+    border: 2px solid var(--clr-black);
+    cursor: pointer;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+    border-radius: var(--radius);
+    margin: 0.5rem;
+    font-family: 'Fraunces', serif;
+    position: absolute;
+    top: 5%;
+    left: 5%;
+
+  }
+  
