--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,9 @@ html, body, #root {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  font-family: var(--ff-secondary);
   background: var(--clr-grey-10);
   color: var(--clr-grey-1);
   line-height: 1.5;
@@ -29,6 +25,8 @@ Fonts
 ===============
 */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Alegreya&family=Baloo+Thambi+2:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@600&display=swap');
 
 /*
 =============== 
@@ -106,23 +104,26 @@ h4 {
   text-transform: capitalize;
   line-height: 1;
   margin-bottom: 0.75rem;
-  font-family: var(--ff-primary);
 }
 h1 {
   font-size: 3rem;
+  font-family: 'Baloo Thambi 2', cursive;
 }
 h2 {
   font-size: 2rem;
+  font-family: 'Fraunces', serif;
 }
 h3 {
   font-size: 1.25rem;
 }
 h4 {
   font-size: 0.875rem;
+  font-family: 'Baloo Thambi 2', cursive;
 }
 p {
   margin-bottom: 1.25rem;
   color: var(--clr-grey-5);
+  font-family: 'Alegreya', serif;
 }
 @media screen and (min-width: 800px) {
   h1 {
@@ -181,6 +182,19 @@ main {
   display: grid;
   place-items: center;
 }
+
+.heading{
+  font-family:'Baloo Thambi 2', cursive;
+}
+
+.subheading{
+  font-family: 'Fraunces', serif;
+}
+
+.smallwords{
+  font-family: 'Alegreya', serif;
+}
+
 .gameover-container, .levelup-container {
   height: 100%;
 
@@ -200,7 +214,7 @@ main {
 
 .btn {
   text-transform: uppercase;
-  background: transparent;
+  background: white;
   color: var(--clr-black);
   padding: 0.375rem 0.75rem;
   letter-spacing: var(--spacing);
