--- a/src/index.css
+++ b/src/index.css
@@ -214,7 +214,7 @@ main {
 
 .btn {
   text-transform: uppercase;
-  background: white;
+  background: transparent;
   color: var(--clr-black);
   padding: 0.375rem 0.75rem;
   letter-spacing: var(--spacing);
