--- a/src/index.css
+++ b/src/index.css
@@ -125,7 +125,18 @@ p {
   color: var(--clr-grey-5);
   font-family: 'Alegreya', serif;
 }
-@media screen and (min-width: 800px) {
+
+@media screen and (max-width: 900px){
+  h1 {font-size: 2 rem};
+  h2 {font-size: 1.5 rem};
+  h3 {font-size: 1 rem};
+  h4{font-size: 0.8 rem};
+
+  h1,h2,h3,h4 {line-height: 0.5;}
+  
+}
+
+@media screen and (min-width: 900px) {
   h1 {
     font-size: 4rem;
   }
